--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-header{
-    background-color:rgb(0, 4, 255);
-    color: rgb(255, 255, 255);
- }
-
-
-    
-
+*{
+  margin: 0;
+  padding: 0;
+}
+.cabeçalho{
+    background-color: black;
+color: white;
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding: 24px;
+}
+.cabeçalho-lista-item {
+  display: inline-block;
+  margin: 0 16px;
+  font-size: 24px;
+}
+.cabeçalho-imagem{
+  width: 20%;
+}
