--- a/style.css
+++ b/style.css
@@ -3,18 +3,30 @@
   padding: 0;
 }
 .cabeçalho{
-    background-color: black;
+    background-color: rgb(255, 0, 0);
 color: white;
 display: flex;
 justify-content: space-around;
 align-items: center;
 padding: 24px;
 }
+.cabeçalho-imagem{
+  width: 10%;
+}
+
 .cabeçalho-lista-item {
   display: inline-block;
   margin: 0 16px;
   font-size: 24px;
 }
-.cabeçalho-imagem{
-  width: 20%;
+.escola-imagem{
+  width: 35%;
+}
+.Escola{
+ background-image:linear-gradient(#ff0000,#ffffff); 
+ color: rgb(255, 255, 255);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 24px0;
 }
