--- a/style.css
+++ b/style.css
@@ -1,32 +1,62 @@
 *{
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 .cabeçalho{
-    background-color: rgb(255, 0, 0);
-color: white;
+    background-color: rgb(255, 3, 3);
+color: rgb(255, 255, 255);
 display: flex;
 justify-content: space-around;
 align-items: center;
 padding: 24px;
 }
-.cabeçalho-imagem{
-  width: 10%;
-}
-
-.cabeçalho-lista-item {
-  display: inline-block;
-  margin: 0 16px;
-  font-size: 24px;
+  .cabeçalho-imagem {
+width: 15%;
+  }
+ 
+.cabeçalho-lista-item{
+    display: inline-block;
+    margin: 16px;
+    font-size: 24px;
 }
 .escola-imagem{
-  width: 35%;
+width: 35%;
 }
 .Escola{
- background-image:linear-gradient(#ff0000,#ffffff); 
- color: rgb(255, 255, 255);
- display: flex;
- justify-content: center;
- align-items: center;
- padding: 24px0;
+  background-image:linear-gradient(#f80101,#fdfdfd);
+  color: rgb(2, 2, 2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
 }
+.Escola{
+  background-image: linear-gradient(#424E61; #16CFFB); color:white;
+  display: flex;
+  justify-content: center;
+  align-items: center; I
+  padding: 24px 0;
+}
+
+.escola-div-conteudo{
+  width: 35%;
+}  
+
+.escola-titulo{
+  padding: 24px 8;
+  }
+  estudante{
+  padding: 24px 0;
+  }
+  estudante imagen{
+  width: 120px;
+  }
+  .estudante-icone{
+  width: 24px;
+  padding: 4px 8px;
+  }
+  .estudante-div{
+   text-align: center; 
+   padding: 16px 0;
+   }
